# Kaleidoscope

./: .clang-format  CMakeLists.txt  makefile
include/: AST.hpp  Compiler.hpp  Error.hpp  Kaleidoscope.hpp  Lexer.hpp  Location.hpp  Logger.hpp  Parser.hpp  Token.hpp  Visitor.hpp
src/: AST.cpp  Compiler.cpp  Kaleidoscope.cpp  Lexer.cpp  Library.cpp  Parser.cpp  main.cpp
tests/: test_lexer.cpp  test_parser.cpp
